Fix avatar spacing

--- a/app/assets/stylesheets/pages/_ideas.scss
+++ b/app/assets/stylesheets/pages/_ideas.scss
@@ -77,7 +77,7 @@
     display: block;
     width: 100%;
     position: absolute;
-    bottom: calc(100% + 13px);
+    bottom: 100%;
     font-size: 0;
 
     & > * {
